--- a/html/feedback.html
+++ b/html/feedback.html
@@ -40,7 +40,7 @@
       <div class="container ">
           <div class="row ">
             <div class="col-lg-2 offset-md-3 d-flex">
-              <img src="../images/logo3.jpg" alt="" style="width: 100%; height: 10vh;">
+              <img src="../images/logo3.jpg" alt="" style="width: 50%; height: 10vh;">
               <!--<h6 class="mt-5 text-left text-danger"><b>PAKISTAN<br>ORDNANCE<br>FACTORIES</b></h6>-->
             </div>
             <div class="col-lg-6 mt-4 sec2">
@@ -118,7 +118,7 @@
 			<div class="row ">
 				<div class="col-sm-12 ">
 					<div class="d-flex">
-						<h3 class="my-4"><b>CONTACT US</b></h3>
+						<h3 class="my-4"><b>FEEDBACK</b></h3>
 						<div class="align-self-end ml-auto my-4">
 							<a href="../index.html"><i class="fa fa-home fa-2x text-white float-right" aria-hidden="true"></i></a>
 						</div>
@@ -214,9 +214,9 @@
     </div>
   
     <!--Footer-->
-    	
+       	
 <!--footer starts from here-->
-<footer class="footer">
+<footer class="footer text-center">
 	<div class="container bottom_border">
 	<div class="row">
 	
@@ -292,18 +292,11 @@
 	
 	<div class="container">
 	
-	<ul class="foote_bottom_ul_amrc">
-		<li><a href="../index.html">Home</a></li>
-		<li><a href="../html/about.html">About</a></li>
-		<li><a href="../html/services.html">Services</a></li>
-		<li><a href="../html/products.html">Products</a></li>
-		<li><a href="../html/feedback.html">Feedback</a></li>
-		<li><a href="../html/contact.html">Contact</a></li>
-    <li><a href="../html/dealers.html">Dealers</a></li>
-	</ul>
-	<!--foote_bottom_ul_amrc ends here-->
-	<p class="text-center">Copyright @2022 | Designed With by <a href="#">EncoderBytes</a></p>
 	
+	<!--foote_bottom_ul_amrc ends here-->
+  <p class="text-center">Copyright @2022 | Designed With by <a href="#">EncoderBytes</a></p>
+	
+	<!---
 	
 
 	<div class="row my-0">
@@ -319,6 +312,8 @@
 				</ul>
 		</div>
 	</div>
+	
+	-->
 	
 	<!--social_footer_ul ends here-->
 	</div>
