--- a/html/products.html
+++ b/html/products.html
@@ -42,7 +42,7 @@
       <div class="container ">
           <div class="row ">
             <div class="col-lg-2 offset-md-3 d-flex">
-              <img src="../images/logo3.jpg" alt="" style="width: 100%; height: 10vh;">
+              <img src="../images/logo3.jpg" alt="" style="width: 50%; height: 10vh;">
               <!--<h6 class="mt-5 text-left text-danger"><b>PAKISTAN<br>ORDNANCE<br>FACTORIES</b></h6>-->
             </div>
             <div class="col-lg-6 mt-4 sec2">
@@ -190,7 +190,7 @@
 
 			----->
 
-			<div class="col-sm-12 small-arms" id="infntry-wpn">
+			<div class="col-sm-12 small-arms text-center" id="infntry-wpn">
 				<div class="row ">
 					<div class="col-sm-4 mb-3">
 						<div class=" ">
@@ -563,7 +563,7 @@
     <!--Footer-->
     	
 <!--footer starts from here-->
-<footer class="footer">
+<footer class="footer text-center">
 	<div class="container bottom_border">
 	<div class="row">
 	
@@ -639,18 +639,11 @@
 	
 	<div class="container">
 	
-	<ul class="foote_bottom_ul_amrc">
-		<li><a href="../index.html">Home</a></li>
-		<li><a href="../html/about.html">About</a></li>
-		<li><a href="../html/services.html">Services</a></li>
-		<li><a href="../html/products.html">Products</a></li>
-		<li><a href="../html/feedback.html">Feedback</a></li>
-		<li><a href="../html/contact.html">Contact</a></li>
-		<li><a href="../html/dealers.html">Dealers</a></li>
-	</ul>
+	
 	<!--foote_bottom_ul_amrc ends here-->
   <p class="text-center">Copyright @2022 | Designed With by <a href="#">EncoderBytes</a></p>
 	
+	<!---
 	
 
 	<div class="row my-0">
@@ -666,6 +659,8 @@
 				</ul>
 		</div>
 	</div>
+	
+	-->
 	
 	<!--social_footer_ul ends here-->
 	</div>
