--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 </head>
 <body>
 
-	<div class="header">  
+	
+
+	<div class="header ">  
 		<div class="container-fluid  text-center hd1">
 			<ul class="list-inline mt-3">
 			  <li><a href="#">Downlaods</a></li>
@@ -40,10 +42,10 @@
 			</ul>
 		</div>
 	
-		<div class="container ">
+		<div class="container">
 				<div class="row ">
 					<div class="col-lg-2 offset-md-3 d-flex">
-						<img src="images/logo3.jpg" alt="" style="width: 100%; height: 10vh;">
+						<img src="images/logo3.jpg" alt="" style="width: 50%; height: 10vh;">
 						<!--<h6 class="mt-5 text-left text-danger"><b>PAKISTAN<br>ORDNANCE<br>FACTORIES</b></h6>-->
 					</div>
 					<div class="col-lg-6 mt-4 sec2">
@@ -73,7 +75,7 @@
 		<!-- Navbar -->
 		<div class="container-fluid bg-danger nav_bar">
 			
-			<div class="navbar navbar-expand-sm navbar-dark "  >
+			<div class="navbar navbar-expand-md navbar-dark "  >
 				
 				<button class="navbar-toggler align-self-end ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 					<span class="navbar-toggler-icon"></span>
@@ -199,8 +201,8 @@
 				</p>
 			</div>
 
-			<div class="col-sm-3 mt-5 p-2 " >
-				<img src="images/image2.webp" alt="img" width="100%" height="auto">
+			<div class="col-sm-3 " >
+				<img src="images/image2.webp" alt="img" width="85%" height="auto">
 			</div>
 		</div>
    </div>
@@ -558,7 +560,7 @@
 	
 		
 <!--footer starts from here-->
-<footer class="footer">
+<footer class="footer text-center">
 	<div class="container bottom_border">
 	<div class="row">
 	
@@ -595,7 +597,7 @@
 	</div>
 	
 	
-	<div class=" col-sm-3">
+	<div class="col-sm-3">
 		
 		<h5 class="headin5_amrc col_white_amrc pt2">IFTIKHAR AWAN   -	<br>  LAHORE Branch  </h5>
 		<!--headin5_amrc-->
@@ -634,20 +636,15 @@
 	
 	<div class="container">
 	
-	<ul class="foote_bottom_ul_amrc col-sm-12 text-center">
-		<li><a href="index.html">Home</a></li>
-		<li><a href="html/about.html">About</a></li>
-		<li><a href="html/services.html">Services</a></li>
-		<li><a href="html/products.html">Products</a></li>
-		<li><a href="html/feedback.html">Feedback</a></li>
-		<li><a href="html/contact.html">Contact</a></li>
-		<li><a href="html/dealers.html">Dealers</a></li>
+	<ul class="foote_bottom_ul_amrc col-sm-12 ">
+		
 	</ul>
 	<!--foote_bottom_ul_amrc ends here-->
 	<p class="text-center text-primary">Copyright @2022 | Designed With by <a href="#" class="text-white"><b>EncoderBytes</b></a></p>
 	
 	
-
+	<!-- 
+	
 	<div class="row my-0">
 		<div class="col-sm-4">
 			<img src="./images/logo3.jpg" alt="" width="50%">
@@ -661,6 +658,7 @@
 				</ul>
 		</div>
 	</div>
+	-->
 	
 	<!--social_footer_ul ends here-->
 	</div>
