--- a/html/services.html
+++ b/html/services.html
@@ -40,7 +40,7 @@
 		<div class="container ">
 			<div class="row ">
 			  <div class="col-lg-2 offset-md-3 d-flex">
-				<img src="../images/logo3.jpg" alt="" style="width: 100%; height: 10vh;">
+				<img src="../images/logo3.jpg" alt="" style="width: 50%; height: 10vh;">
 				<!--<h6 class="mt-5 text-left text-danger"><b>PAKISTAN<br>ORDNANCE<br>FACTORIES</b></h6>-->
 			  </div>
 			  <div class="col-lg-6 mt-4 sec2">
@@ -207,115 +207,110 @@
 
 
     <!--Footer-->
-    	
-<!--footer starts from here-->
-<footer class="footer">
-	<div class="container bottom_border">
-	<div class="row">
-	
-	<div class=" col-sm-3">
-	<h5 class="headin5_amrc col_white_amrc pt2">HAJI INSAF SHAH & Sons - NOWSHERA Branch  </h5>
-	<!--headin5_amrc-->
-	<p class="mb10">Address: Azakhel Bala, Distt Nowshera, KPK, Pakistan</p>
-	<!--
-		<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-	-->
-	<p><i class="fa fa-phone"></i>  Office: +92-345-9282453  </p>
-	<p><i class="fa fa-phone"></i>  Cell No: +92-333-9999763 </p>
-	<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849</p>
-	<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a></p>
-	
-	
-	</div>
-	
-	
-	<div class=" col-sm-3">
-		<h5 class="headin5_amrc col_white_amrc pt2">NEW CLASSIC ARMS CO - PESHAWAR Branch  </h5>
+			
+	<!--footer starts from here-->
+	<footer class="footer text-center">
+		<div class="container bottom_border">
+		<div class="row">
+		
+		<div class=" col-sm-3">
+		<h5 class="headin5_amrc col_white_amrc pt2">HAJI INSAF SHAH & Sons - NOWSHERA Branch  </h5>
 		<!--headin5_amrc-->
-		<p class="mb10">Address: Small Industrial State, Kohat Road, Peshawar ,Pakistan</p>
+		<p class="mb10">Address: Azakhel Bala, Distt Nowshera, KPK, Pakistan</p>
 		<!--
 			<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
 		-->
-		<p><i class="fa fa-phone"></i>  Office: +92-91-2321696 </p>
-		<p><i class="fa fa-phone"></i>  Cell No: +92-310-9577286 </p>
+		<p><i class="fa fa-phone"></i>  Office: +92-345-9282453  </p>
+		<p><i class="fa fa-phone"></i>  Cell No: +92-333-9999763 </p>
 		<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849</p>
-		<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a>  </p>
+		<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a></p>
 		
 		
-	<!--footer_ul_amrc ends here-->
-	</div>
-	
-	
-	<div class=" col-sm-3">
-		
-		<h5 class="headin5_amrc col_white_amrc pt2">IFTIKHAR AWAN   -	<br>  LAHORE Branch  </h5>
-		<!--headin5_amrc-->
-		<p class="mb10">Address: 31 Ravi Road, Lahore, Punjab, Pakistan.</p>
-		<!--
-			<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-		-->
-		<p><i class="fa fa-phone"></i>  Office:  +92-42-37721505  </p>
-		<p><i class="fa fa-phone"></i>  Cell No: +92-345-9156792</p>
-		<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849  </p>
-		<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a> </p>
+		</div>
 		
 		
-	<!--footer_ul_amrc ends here-->
-	</div>
-	
-	
-	<div class=" col-sm-3">
-		<h5 class="headin5_amrc col_white_amrc pt2">SHABBIR BROTHERS - SAHIWAL Branch   </h5>
-		<!--headin5_amrc-->
-		<p class="mb10">Address: Stadium Chowk, Sahiwal, Pakistan. </p>
-		<!--
-			<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-		-->
-		<p><i class="fa fa-phone"></i>  Office:  +92-40-422 2230  </p>
-		<p><i class="fa fa-phone"></i>  Cell No: +92-347-9906644 </p>
-		<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849
+		<div class=" col-sm-3">
+			<h5 class="headin5_amrc col_white_amrc pt2">NEW CLASSIC ARMS CO - PESHAWAR Branch  </h5>
+			<!--headin5_amrc-->
+			<p class="mb10">Address: Small Industrial State, Kohat Road, Peshawar ,Pakistan</p>
+			<!--
+				<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
+			-->
+			<p><i class="fa fa-phone"></i>  Office: +92-91-2321696 </p>
+			<p><i class="fa fa-phone"></i>  Cell No: +92-310-9577286 </p>
+			<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849</p>
+			<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a>  </p>
+			
+			
+		<!--footer_ul_amrc ends here-->
+		</div>
+		
+		
+		<div class=" col-sm-3">
+			
+			<h5 class="headin5_amrc col_white_amrc pt2">IFTIKHAR AWAN   -	<br>  LAHORE Branch  </h5>
+			<!--headin5_amrc-->
+			<p class="mb10">Address: 31 Ravi Road, Lahore, Punjab, Pakistan.</p>
+			<!--
+				<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
+			-->
+			<p><i class="fa fa-phone"></i>  Office:  +92-42-37721505  </p>
+			<p><i class="fa fa-phone"></i>  Cell No: +92-345-9156792</p>
+			<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849  </p>
+			<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a> </p>
+			
+			
+		<!--footer_ul_amrc ends here-->
+		</div>
+		
+		
+		<div class=" col-sm-3">
+			<h5 class="headin5_amrc col_white_amrc pt2">SHABBIR BROTHERS - SAHIWAL Branch   </h5>
+			<!--headin5_amrc-->
+			<p class="mb10">Address: Stadium Chowk, Sahiwal, Pakistan. </p>
+			<!--
+				<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
+			-->
+			<p><i class="fa fa-phone"></i>  Office:  +92-40-422 2230  </p>
+			<p><i class="fa fa-phone"></i>  Cell No: +92-347-9906644 </p>
+			<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849
 
-		</p>
-		<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a> </p>
-	<!--footer_ul2_amrc ends here-->
-	</div>
-	</div>
-	</div>
-	
-	
-	<div class="container">
-	
-	<ul class="foote_bottom_ul_amrc">
-		<li><a href="../index.html">Home</a></li>
-		<li><a href="../html/about.html">About</a></li>
-		<li><a href="../html/services.html">Services</a></li>
-		<li><a href="../html/products.html">Products</a></li>
-		<li><a href="../html/feedback.html">Feedback</a></li>
-		<li><a href="../html/contact.html">Contact</a></li>
-		<li><a href="../html/dealers.html">Dealers</a></li>
-	</ul>
-	<!--foote_bottom_ul_amrc ends here-->
+			</p>
+			<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a> </p>
+		<!--footer_ul2_amrc ends here-->
+		</div>
+		</div>
+		</div>
+		
+		
+		<div class="container">
+		
+		
+		<!--foote_bottom_ul_amrc ends here-->
 	<p class="text-center">Copyright @2022 | Designed With by <a href="#">EncoderBytes</a></p>
-	
-	
+		
+		<!---
+		
 
-	<div class="row my-0">
-		<div class="col-sm-4">
-			<img src="../images/logo3.jpg" alt="" width="50%">
-		</div>
+		<div class="row my-0">
+			<div class="col-sm-4">
+				<img src="../images/logo3.jpg" alt="" width="50%">
+			</div>
 
-		<div class="col-sm-4 mt-2">
-			<ul class="social_footer_ul">
-				<li><a href="https://www.facebook.com/New-Classic-Arms-Company-peshawar-286620468543510/"><i class="fab fa-facebook-f"></i></a></li>
-				<li><a href="https://www.youtube.com/channel/UCcW5vdDYZ3s4uBtkJJIdmDg/featured"><i class="fab fa-youtube"></i></a></li>
-				<li><a href="https://www.instagram.com/newclassicarms"><i class="fab fa-instagram"></i></a></li>
-				</ul>
+			<div class="col-sm-4 mt-2">
+				<ul class="social_footer_ul">
+					<li><a href="https://www.facebook.com/New-Classic-Arms-Company-peshawar-286620468543510/"><i class="fab fa-facebook-f"></i></a></li>
+					<li><a href="https://www.youtube.com/channel/UCcW5vdDYZ3s4uBtkJJIdmDg/featured"><i class="fab fa-youtube"></i></a></li>
+					<li><a href="https://www.instagram.com/newclassicarms"><i class="fab fa-instagram"></i></a></li>
+					</ul>
+			</div>
 		</div>
-	</div>
-	
-	<!--social_footer_ul ends here-->
-	</div>
-	
-	</footer>
+		
+		-->
+		
+		<!--social_footer_ul ends here-->
+		</div>
+		
+		</footer>
 </body>
 </html>
