--- a/html/feedback.html
+++ b/html/feedback.html
@@ -31,23 +31,23 @@
     <div class="header">  
       <div class="container-fluid  text-center hd1">
         <ul class="list-inline mt-3">
-          <li><a href="#">Downlaods</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Why Us</a></li>
+         <!--<li><a href="#">Downlaods</a></li>-->
+          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="about.html">Why Us</a></li>
         </ul>
       </div>
     
       <div class="container ">
           <div class="row ">
             <div class="col-lg-2 offset-md-3 d-flex">
-              <img src="../images/logo3.jpg" alt="" style="width: 50%; height: 10vh;">
+              <img src="../images/logo3.jpg" alt="" style="width: 100%; height: 10vh;">
               <!--<h6 class="mt-5 text-left text-danger"><b>PAKISTAN<br>ORDNANCE<br>FACTORIES</b></h6>-->
             </div>
             <div class="col-lg-6 mt-4 sec2">
               <div class="row">
                 <div class="col-sm-6" >
                   <h6><b>EMAIL US @</b></h6>
-                  <a href="">info.newclassicarms@gmail.com</a>
+                  <a href="mailto:info.newclassicarms@gmail.com">info.newclassicarms@gmail.com</a>
                 </div>
     
                 <div class="col-sm-6" >
@@ -141,23 +141,23 @@
     <div class="container mt-4 form">
         <div class="row ">
             <div class="col-sm-5 pb-3">
-                  <h4><b>CHAIRMAN POF BOARD</b></h4>
+                  <h4><b>New Classic Arms</b></h4>
                   <div class="mt-4 " style="height: 50px;">
-                    <p><span  ><i class="fa fa-location-arrow  p-4 mr-3" ></i></span></i><b>Lt. General Ali Amir Awan HI(M)</b></p>
+                    <p><span  ><i class="fa fa-location-arrow  p-4 mr-3" ></i></span></i><b>New Classic Arms</b></p>
                   </div>
                   <div class="mt-4">
-                    <p><span><i class="fa fa fa-envelope  p-4 mr-3" ></i></span></i><b>chairman@pof.gov.pk</b></p>
+                    <p><span><i class="fa fa fa-envelope  p-4 mr-3" ></i></span></i><b>Email: <a href="mailto:info.newclassicarms@gmail.com">info.newclassicarms@gmail.com</a></b></p>
                   </div>
 
                   <hr style="border: 0.001em solid gray;" class="my-5">
 
-                  <h4><b>DIRECTOR INDUSTRIAL & COMMERCIAL RELATIONS</b></h4>
+                  <h4><b>NEW CLASSIC ARMS CO - PESHAWAR Branch</b></h4>
                   <div class="mt-4 " style="height: 50px;">
-                    <p><span  ><i class="fa fa-location-arrow  p-4 mr-3" ></i></span></i><b>Mr. Rehan Waheed Khan)</b></p>
+                    <p><span  ><i class="fa fa-location-arrow  p-4 mr-3" ></i></span></i><b>Mr Hammad Insaf</b></p>
                   </div>
                   <div class="mt-4">
-                    <p><span><i class="fa fa fa-phone p-4 mr-3 " ></i></span></i><b>+92 51 9314055</b></p>
-                    <p><span><i class="fa fa fa-envelope  p-4 mr-3" ></i></span></i><b>dicr@pof.gov.pk</b></p>
+                    <p><span><i class="fa fa fa-phone p-4 mr-3 " ></i></span></i><b>+92-91-3040026</b></p>
+                    <p><span><i class="fa fa fa-envelope  p-4 mr-3" ></i></span></i><b>Email:<a href="mailto:info.newclassicarms@gmail.com">info.newclassicarms@gmail.com</a></b></p>
                   </div>
             </div>
 
@@ -230,7 +230,7 @@
 	<p><i class="fa fa-phone"></i>  Office: +92-345-9282453  </p>
 	<p><i class="fa fa-phone"></i>  Cell No: +92-333-9999763 </p>
 	<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849</p>
-	<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a></p>
+	<p><i class="fa fa fa-envelope"></i> E-Mail:<a href="mailto:info.newclassicarms@gmail.com">info.newclassicarms@gmail.com</a> </p>
 	
 	
 	</div>
@@ -246,7 +246,7 @@
 		<p><i class="fa fa-phone"></i>  Office: +92-91-2321696 </p>
 		<p><i class="fa fa-phone"></i>  Cell No: +92-310-9577286 </p>
 		<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849</p>
-		<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a>  </p>
+		<p><i class="fa fa fa-envelope"></i> E-Mail:<a href="mailto:info.newclassicarms@gmail.com">info.newclassicarms@gmail.com</a>  </p>
 		
 		
 	<!--footer_ul_amrc ends here-->
@@ -264,7 +264,7 @@
 		<p><i class="fa fa-phone"></i>  Office:  +92-42-37721505  </p>
 		<p><i class="fa fa-phone"></i>  Cell No: +92-345-9156792</p>
 		<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849  </p>
-		<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a> </p>
+		<p><i class="fa fa fa-envelope"></i> E-Mail:<a href="mailto:info.newclassicarms@gmail.com">info.newclassicarms@gmail.com</a> </p>
 		
 		
 	<!--footer_ul_amrc ends here-->
@@ -283,7 +283,7 @@
 		<p><i class="fa fa-phone"></i>  Cell No: +92-333-9371849
 
 		</p>
-		<p><i class="fa fa fa-envelope"></i> E-Mail: <a href="">info.newclassicarms@gmail.com </a> </p>
+		<p><i class="fa fa fa-envelope"></i> E-Mail:<a href="mailto:info.newclassicarms@gmail.com">info.newclassicarms@gmail.com</a> </p>
 	<!--footer_ul2_amrc ends here-->
 	</div>
 	</div>
